third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/float/exp-double-e-2.stderr
TOML parse error at line 1, column 21
  |
1 | exp-double-e-2 = 1e2e3
  |                     ^
expected newline, `#`
